Hopefully fixed issue with container being too high up

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -106,7 +106,7 @@ a:hover {
 
 .container {
     max-width: 50%;
-    margin: 2rem auto 2rem;
+    margin: 8rem auto 16rem;
     padding: 1.2rem;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
@@ -287,6 +287,9 @@ a:hover {
 @media (max-height: 590px) {
     .footer {
         position: relative;
+    }
+    .container{
+        margin: 2rem auto 2rem;
     }
 }
 
